# ChronoMoEv3

./: .gitignore  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_REFINEMENTS.md  LICENSE  MECHANISTIC_FRAMING.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_REFINEMENTS.md  PROGRESS.md  README.md  SOVEREIGN_ROUTER_ARCHITECTURE.md  STATE_ARCHITECTURE_V2.md  STATE_SEPARATION.md  coherence_hooks.md  dataflow_comparison.md  dataflow_mixtral.md  dataflow_switch_transformer.md  firststeps.md  projectdesign.md  pyproject.toml
chronomoe_v3/: __init__.py  clocks.py  coherence.py  coherence_gpu.py  config.py  lifecycle.py  router.py
examples/: coherence_demo.py  step1_demo.py  step2_demo.py  step3_demo.py  step4_demo.py  step5_demo.py
experiments/: CAPACITY_WHIPLASH_COMPARISON.md  README.md  beta_saturation_analysis.py  capacity_whiplash_earned.py  capacity_whiplash_test.py  scale_free_beta_validation.py
tests/: test_beta_update.py  test_bridge_detector.py  test_clocks.py  test_coherence.py  test_coherence_gpu.py  test_lifecycle.py  test_router.py
